--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,7 +26,7 @@ spring:
         enabled: true
         path : /h2-console
    datasource:
-       url: jdbc:h2:~/olibilldb/olibilldb;AUTO_SERVER=TRUE #jdbc:h2:~/olibilldb;AUTO_SERVER=TRUE
+       url: jdbc:h2:~/olibilldb/olibillprovincedb;AUTO_SERVER=TRUE #; DATABASE_TO_UPPER=false #jdbc:h2:~/olibilldb;AUTO_SERVER=TRUE
        platform: h2
        data: classpath:data/provinces.sql #classpath:data/taxes.sql, classpath:data/provinces.sql, classpath:data/taxesprovinces.sql #, classpath:reviews.sql
    jpa:
