--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<startClass>com.dobatii.dockerization1.Dockerization1Application</startClass>
 		<swagger.version>2.9.2</swagger.version>
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 <!-- 		<docker.image.prefix>doj</docker.image.prefix> -->
 	</properties>
 
@@ -131,6 +131,47 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 			
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.4</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<!-- attached to Maven test phase -->
+					<execution>
+						<id>report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<!-- attached to Maven test phase -->
+					<execution>
+					    <id>jacoco-check</id>
+					    <goals>
+					        <goal>check</goal>
+					    </goals>
+					    <configuration>
+					        <rules>
+					            <rule>
+					                <element>PACKAGE</element>
+					                <limits>
+					                    <limit>
+					                        <counter>LINE</counter>
+					                        <value>COVEREDRATIO</value>
+					                        <minimum>0.25</minimum>
+					                    </limit>
+					                </limits>
+					            </rule>
+					        </rules>
+					    </configuration>
+					</execution>
+				</executions>
+			</plugin>
 <!-- 			<plugin> -->
 <!-- 				<groupId>com.spotify</groupId> -->
 <!--   				<artifactId>dockerfile-maven-plugin</artifactId>		 -->
