--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.4.RELEASE</version>
-<!-- 		<relativePath/> lookup parent from repository -->
+		<version>2.7.7</version>
+		<relativePath/> <!-- 		lookup parent from repository -->
 	</parent>
 	<groupId>com.dobatii</groupId>
 	<artifactId>dockerization1</artifactId>
@@ -35,13 +35,18 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		 <groupId>org.springframework.hateoas</groupId>
+		 <artifactId>spring-hateoas</artifactId>
 		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+			<artifactId>spring-boot-starter-data-r2dbc</artifactId>
 		</dependency>
+		<!-- <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb-reactive</artifactId>
+		</dependency-->
 		
 		<dependency>
   			<groupId>org.apache.commons</groupId>
@@ -97,10 +102,16 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+			<groupId>io.r2dbc</groupId>
+			<artifactId>r2dbc-h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		
+		<!-- <dependency>
 			<groupId>de.flapdoodle.embed</groupId>
 			<artifactId>de.flapdoodle.embed.mongo</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency-->
 		<dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
@@ -163,7 +174,7 @@
 					                    <limit>
 					                        <counter>LINE</counter>
 					                        <value>COVEREDRATIO</value>
-					                        <minimum>0.25</minimum>
+					                        <minimum>0.0</minimum>
 					                    </limit>
 					                </limits>
 					            </rule>
