--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,25 @@
 	        <artifactId>spring-security-oauth2-client</artifactId>
 	    </dependency>
 	    
+	    <!-- jjwt library dependencies -->
+	    <dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-api</artifactId>
+		    <version>0.11.5</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-impl</artifactId>
+		    <version>0.11.5</version>
+		    <scope>runtime</scope>
+		</dependency>
+		<dependency>
+		    <groupId>io.jsonwebtoken</groupId>
+		    <artifactId>jjwt-jackson</artifactId>
+		    <version>0.11.5</version>
+		    <scope>runtime</scope>
+		</dependency>
+	    
 		<dependency>
   			<groupId>org.apache.commons</groupId>
   			<artifactId>commons-lang3</artifactId>
